[package]
name = "libplamo"
version = "0.3.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
license = "MIT"
description = "Plamo is a web server interface for all the programming languages"
repository = "https://github.com/plamo/libplamo"
readme = "README.md"
keywords = ["Plamo"]
categories = ["web-programming"]
edition = "2018"
publish = false

[lib]
name = "plamo"
crate-type = ["cdylib"]

[dependencies]
multipart = { version = "0.16.1", default-features = false, features = ["server"] }
url = "2.1.0"

[profile.release]
lto = true
